[tool.poetry]
name = "aiochris"
version = "0.3.0rc5"
description = "ChRIS client built on aiohttp"
authors = ["FNNDSC <dev@babyMRI.org>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"

pyserde = "^0.11.1"
async-property = "^0.2.1"
# bug in yarl v1.9
# https://github.com/aio-libs/yarl/issues/862
yarl = "1.8.2"
aiofiles = "^23.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pre-commit = "^3.2.2"
pytest-mock = "^3.10.0"
coverage = "^7.0.5"
pytest-cov = "^4.0.0"


[tool.poetry.group.doc.dependencies]
pdoc = "^12.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov-config=.coveragerc"
