[tool.poetry]
name = "aiochris"
version = "0.3.0"
description = "ChRIS client built on aiohttp"
authors = ["FNNDSC <dev@babyMRI.org>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"

async-property = "^0.2.1"
# bug in yarl v1.9
# https://github.com/aio-libs/yarl/issues/862
yarl = "1.8.2"
aiofiles = "^23.1.0"

# pyserde without pyserde[toml] is good enough is ChrisClient.from_chrs is not needed,
# but optional passthrough dependency not supported by poetry.
# see https://github.com/python-poetry/poetry/issues/834
pyserde = {version = "^0.12.1", extras = ["toml"]}
keyring = {version = "^24.2.0", optional = true}
chrs = {version = "^0.2.4", optional = true}

[tool.poetry.extras]
chrs = ["pyserde", "keyring", "chrs"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pre-commit = "^3.2.2"
pytest-mock = "^3.10.0"
coverage = "^7.0.5"
pytest-cov = "^4.0.0"

[tool.poetry.group.doc.dependencies]
pdoc = "^12.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov-config=.coveragerc"
