[project]
name = "aiochris"
version = "0.5.0a7"
description = "ChRIS client built on aiohttp"
authors = [
    { name = "Jennings Zhang", email = "jennings.zhang@childrens.harvard.edu" },
    { name = "FNNDSC", email = "dev@babyMRI.org" }
]
dependencies = [
    "aiohttp>=3.9.5",
    "yarl>=1.9.4",
    "pyserde>=0.19.3",
    "async-property>=0.2.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.1",
    "pytest-asyncio>=0.23.8",
    "pytest-mock>=3.14.0",
    "coverage>=7.6.0",
    "pytest-cov>=5.0.0",
    "pdoc>=14.5.1",
    "pytest-aiohttp>=1.0.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aiochris"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov-config=.coveragerc"
